# TreeCode

./: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.status  configure  configure.ac  libtool
TreeCode2/: .cproject  .gitignore  .project  3d_typedefs.h  Analyser.cpp  Configuration.h  Makefile  Node.h  OptionParser.h  Particle.h  ParticleGenerator.cpp  README  Simulator.cpp  TimeIntegrator.h  Tree.h  animate.rb  common.mk  db_design.txt  doxy.conf  main.cpp  plot_energies.rb
TreeCode2/bounds/: BoundaryConditions.h  CountingPeriodicBounds.h  CullingBoundary.h  OpenBoundary.h  PeriodicBoundary.h  ReflectiveBoundary.h
TreeCode2/distributions/: ChargeDistribution.h  ConstDistribution.h  ConstantChargeDistribution.h  CylindricalDistribution.h  Distribution.h  MaxwellDistribution.h  ParticleAvoidingDistribution.h  SinusoidalDistribution.h  SphericalDistribution.h  UniformDistribution.h  dists.h
TreeCode2/drude/: BigParticle.h  CullingDrudePusher.h  DrudeMAC.h  DrudePusher.h
TreeCode2/examples/3d-closed/: Makefile  main.cpp
TreeCode2/examples/3d-open/: Makefile  main.cpp
TreeCode2/examples/3d-plasma-freq/: Makefile  dump_particles.rb  main.cpp  notes  parse_particles.rb  particles_in_bin.rb  read_particles.R  simulations.sh
TreeCode2/examples/3d-plasma-freq/run1/: notes
TreeCode2/examples/3d-plasma-freq/run2/: notes
TreeCode2/examples/3d-plasma-freq/run3/: notes
TreeCode2/examples/accuracy-test/: Makefile  accuracy-test  main.cpp
TreeCode2/examples/debye-sheath/: Makefile  dens1  get_n_density.awk  main.cpp
TreeCode2/examples/drude/: Makefile  drude  main.cpp  visualise_positions.rb
TreeCode2/examples/ewald/: Makefile  main.cpp
TreeCode2/examples/heat-flow/: Makefile  dump_temperature.rb  main.cpp
TreeCode2/examples/resistivity/: .~lock.test.csv#  Makefile  environs.rb  main.cpp
TreeCode2/examples/resistivity/run1/: notes
TreeCode2/examples/resistivity/run2/: notes
TreeCode2/io/: CoordTracker.h  ParticleReader.h  ParticleTracker.h
TreeCode2/macs/: AcceptanceCriterion.h  BarnesHutMAC.h
TreeCode2/opt_parser/: OptionParser.h
TreeCode2/output/: CoordTracker.h  Histogram.h  Output.h  ParticleTracker.h  RadiusTracker.h  TemperatureTracker.h
TreeCode2/output/sqlite/: DatabaseConnection.h
TreeCode2/potentials/: CoulombForce.h  CoulombForceEField.h  DampingCoulombForce.h  EwaldForce.h  InterpolatedEwaldSum.h  Potential.h
TreeCode2/pushers/: LeapfrogPusher.h  pusher.h
TreeCode2/tests/: DistributionTest.cpp  DistributionTests.cpp  EwaldTest.cpp  IOTest.cpp  LeapfrogTest.cpp  Makefile  ParticleTest.cpp  TreeTest.cpp  analytic.h  custom_asserts.cpp  custom_asserts.h  force-test-both  force-test-fourier  force-test-real  test  test.rb
